# symbolic_takehome

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scrape.sh
sql/: init.sql
src/hn_scraper/: activities.py  models.py  parse.py  start_workflow.py  worker.py  workflow.py
tests/: conftest.py  test_parse.py  test_workflow.py
tests/fixtures/: hn_sample.html
