[project]
name = "hn-scraper"
version = "0.1.0"
description = "Hacker News scraper via Temporal + Playwright + Postgres"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.8.0",
    "playwright==1.49.1",
    "psycopg[binary]>=3.2.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 120
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["hn_scraper"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 0

